sm8150-common: Update GPS config from HD1911_11_F.20
 We will use the config from /vendor/etc/ instead of odm.
 This fixes the GPS.

Change-Id: I435af86caabcce6e7b5ccf6f9ce6aba5a45cb2cb

--- a/configs/gps.conf
+++ b/configs/gps.conf
@@ -1,17 +1,10 @@
-#Version check for XTRA
-#DISABLE = 0
-#AUTO    = 1
-#XTRA2   = 2
-#XTRA3   = 3
-XTRA_VERSION_CHECK=0
-#ODM
 # Error Estimate
 # _SET = 1
 # _CLEAR = 0
 ERR_ESTIMATE=0
 
 #NTP server
-NTP_SERVER=time.izatcloud.net
+NTP_SERVER=time.xtracloud.net
 
 #XTRA CA path
 XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
@@ -86,11 +79,13 @@ CAPABILITIES=0x17
 ####################################
 #  LTE Positioning Profile Settings
 ####################################
+# LPP_PROFILE is a bit mask
 # 0: Enable RRLP on LTE(Default)
-# 1: Enable LPP_User_Plane on LTE
-# 2: Enable LPP_Control_Plane
-# 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 3
+# 0x1: LPP User Plane
+# 0x2: LPP Control Plane
+# 0x4: LPP User Plane for NR5G
+# 0x8: LPP Control Plane for NR5G
+LPP_PROFILE = 2
 
 ####################################
 #Datum Type
@@ -322,8 +317,9 @@ CP_MTLR_ES=0
 ##################################################
 # 0 : Enable QTI GNSS (default)
 # 1 : Enable QCSR SS5
-# This setting use to select between QTI GNSS
-# and QCSR SS5 hardware receiver.
+# 2 : Enable PDS API
+# This setting use to select between QTI GNSS,
+# QCSR SS5 hardware receiver, and PDS API.
 # By default QTI GNSS receiver is enabled.
 # GNSS_DEPLOYMENT = 0
 
@@ -352,3 +348,40 @@ V_LEVEL_MAX_CAPACITY = 400
 # fails during boot up time.
 ##################################################
 BUFFER_DIAG_LOGGING = 1
+
+#######################################
+#  NTRIP CLIENT LIBRARY NAME
+#######################################
+# NTRIP_CLIENT_LIB_NAME =
+
+##################################################
+# Correction Data Framework settings
+# Default values:
+# CDFW_SOURCE_PRIORITY_1 = INTERNAL_1 RTCM
+# CDFW_INJECT_DATA_INTERVAL = 600000 //10 mins
+# CDFW_RTCM_MESSAGE_INTERVAL = 1000  //1 second
+#
+# If multiple sources coexist on a PL,
+# the prorioty sequence can be set by the integer number.
+# PRIORITY_1 is higher than PRIORITY_2, for example,
+# CDFW_SOURCE_PRIORITY_1 = INTERNAL_1 RTCM
+# CDFW_SOURCE_PRIORITY_2 = CV2X RTCM
+##################################################
+
+##################################################
+# RF LOSS
+# The loss in 0.1 dbHz from the C/N0 at the antenna port
+# These values must be configured by OEM if not
+# supported in QMI LOC message
+# There is one entry for each signal type
+##################################################
+RF_LOSS_GPS = 0
+RF_LOSS_GPS_L5 = 0
+RF_LOSS_GLO_LEFT = 0
+RF_LOSS_GLO_CENTER = 0
+RF_LOSS_GLO_RIGHT = 0
+RF_LOSS_BDS = 0
+RF_LOSS_BDS_B2A = 0
+RF_LOSS_GAL = 0
+RF_LOSS_GAL_E5 = 0
+RF_LOSS_NAVIC = 0
